# cape

./: .gitignore  README.md  bootstrap_cape_multidataset.sh  pyproject.toml  requirements.txt  run_cape_multidataset.sh
cape_det/: __init__.py
cape_det/datasets/: __init__.py  cli.py  collate.py  common.py  download.py  formats.py  joint.py  label_mapping.py  prepare.py  registry.py  tinyperson.py  tinyperson_prepare.py  transforms.py  validators.py  visdrone.py  visdrone_prepare.py
cape_det/losses/: __init__.py  cape_losses.py  detection_losses.py  matching.py  total_loss.py
cape_det/metrics/: __init__.py  box_ops.py  curves.py  latency.py  reporting.py  sar_metrics.py  threshold_analysis.py  unified_evaluator.py
cape_det/models/: __init__.py  hybrid_detector.py  postprocess.py
cape_det/trainers/: build.py  checkpoint.py  loops.py  trainer.py
configs/: defaults.yaml
docs/: 01_MAIN_PROMPT.md  02_PHASE_B_PROMPT.md  03_REVIEW_PROMPT.md  04_EVALUATION_PROTOCOL.md  05_QUICKSTART.md  README.md  codex.md
scripts/: benchmark_latency.py  budget_sweep.py  evaluate.py  make_benchmarks.py  plot_figures.py  prepare_datasets.py  sanity_check_dataset.py  smoke_report_generation.py  train.py  visualize_predictions.py
tests/: test_ablation_toggles.py  test_cape_refinement.py  test_cape_renderer.py  test_cape_supervision.py  test_curve_exports.py  test_dataset_parsing.py  test_dataset_registry_prepare.py  test_decode.py  test_dummy_train_step.py  test_evaluation_unification.py  test_forward_pass.py  test_label_mapping.py  test_losses.py  test_reporting_tables.py
(+41 files in other folders)
