[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cape-det"
version = "0.1.0"
description = "CAPE-Det research prototype for tiny-person detection and SAR-oriented evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "torch>=2.1",
  "tqdm>=4.66",
  "gdown>=5.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["cape_det*"]
